--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -7,6 +7,7 @@
     font-size: 2em;
     font-weight:bold;
     margin-bottom: 1em;
+    line-height: 1.2em;
   }
   .content {
     border-top:1px solid #eaeaea;
