Enable to customize toolbar collection

--- a/app/assets/stylesheets/bootstrap_and_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_override.css.scss
@@ -3,6 +3,6 @@ $iconSpritePath: '';
 $iconWhiteSpritePath: '';
 
 @import 'bootstrap';
-body {padding-top:3em;}
+// body {padding-top:3em;}
 @import 'bootstrap-responsive';
 
