--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,24 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class='span8 offset2'>
+
+  <div class="navbar">
+  <div class="navbar-inner">
+    <a class="brand" href="#"><b>Summernote Editor</b></a>
+    <ul class="nav">
+      <li><a href="#">Home</a></li>
+      <li class="active"><a href="#">Posts</a></li>
+      <li><a href="#">About</a></li>
+    </ul>
+    <ul class="nav pull-right">
+      <li><a href="#">Logout</a></li>
+    </ul>
+  </div>
+</div>
+<div class='row-fluid'>
+  <div class='span10 offset1'>
     <%= yield %>
   </div>
+</div>  
 </body>
 </html>
