--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,23 +8,36 @@
 </head>
 <body>
 
-  <div class="navbar">
-  <div class="navbar-inner">
-    <a class="brand" href="#"><b>Summernote Editor</b></a>
-    <ul class="nav">
-      <li><a href="#">Home</a></li>
-      <li class="active"><a href="#">Posts</a></li>
+<nav class="navbar navbar-default" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">Summernote Editor</a>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li><a href="/">Home</a></li>
+      <li><a href="/posts">Posts</a></li>
       <li><a href="#">About</a></li>
     </ul>
-    <ul class="nav pull-right">
+    <ul class="nav navbar-nav navbar-right">
       <li><a href="#">Logout</a></li>
     </ul>
   </div>
-</div>
-<div class='row-fluid'>
-  <div class='span10 offset1'>
+</nav>
+
+<div class='row'>
+  <div class='col-md-10 col-md-offset-1' style='padding:1em 0;'>
     <%= yield %>
   </div>
+
 </div>  
 </body>
 </html>
