--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,16 +1,14 @@
 <%= simple_form_for(@post) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <div class="row-fluid">
-      <div class="span12">
-        <%= f.input :title, input_html:{class:'span12'} %>
-      </div>
-    </div>
+  <div class="form-group">
+    <%= f.input :title, input_html:{class:'form-control'} %>
+  </div>
+  <div class="form-group">  
     <%= f.input :content, class:'summernote' %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: "btn btn-default" %>
   </div>
 <% end %>
