--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <% if notice %>
-  <div class="alert">
+  <div class="alert alert-success">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     <%= notice %>
   </div>
