--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,14 +5,14 @@
   <p style="margin-bottom: 0px; font-size: 18px; line-height: 1.25; font-family: HelveticaNeue, 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; text-align: left; "><img src="http://imperavi.com/img/woman-red@2x.jpg" alt="Red" style="width: 300px; float: left; margin-right: 20px; margin-bottom: 10px; "></p><h3 style="font-family: HelveticaNeue, 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; line-height: 1.5; color: rgb(51, 51, 51); text-align: left; ">Atlas Shrugged</h3><p style="margin-bottom: 0px; font-size: 18px; line-height: 1.25; font-family: HelveticaNeue, 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; text-align: left; "><span style="color: rgb(165, 165, 165); "><em>Ayn Rand</em></span></p><p style="margin-bottom: 0px; font-size: 18px; line-height: 1.25; font-family: HelveticaNeue, 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; text-align: left; ">She sat listening to the&nbsp;<a href="http://en.wikipedia.org/wiki/Music" style="color: rgb(221, 72, 20); ">music</a>. It was a symphony of triumph. The notes flowed up, they spoke of rising and they were the rising itself, they were the essence and the form of upward motion, they seemed to embody every human act and thought that had ascent as its motive. It was a sunburst of sound, breaking out of hiding and spreading open. It had the freedom of release and the tension of purpose. It swept space clean, and left nothing but the joy of an unobstructed effort. Only a faint echo within the sounds spoke of that from which the music had escaped, but spoke in laughing astonishment at the discovery that there was no ugliness or pain, and there never had had to be. It was the song of an immense deliverance.</p><p style="margin-bottom: 0px; font-size: 18px; line-height: 1.25; font-family: HelveticaNeue, 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; text-align: left; ">She thought: For just a few moments — while this lasts — it is all right to surrender completely — to forget everything and just permit yourself to feel. She thought: Let go — drop the controls — this is it.</p><p style="margin-bottom: 0px; font-size: 18px; line-height: 1.25; font-family: HelveticaNeue, 'Helvetica Neue', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; text-align: left; ">Somewhere on the edge of her mind, under the music, she heard the sound of train wheels. They knocked in an even rhythm, every fourth knock accented, as if stressing a conscious purpose. She could relax, because she heard the wheels. She listened to the symphony, thinking: This is why the wheels have to be kept going, and this is where they’re going.</p> 
 </div>
 <br />
-<div class="row-fluid">
-  <div class="span12">
+<div class="row">
+  <div class="col-md-12">
     <%= link_to "Go to Posts", posts_path, class: 'btn btn-large btn-info span12' %>
   </div>
 </div>
 <br />
-<div class="row-fluid">  
-  <div class="span12">
-    <%= link_to "http://github.com/rorlab/summernote-rails", 'http://github.com/rorlab/summernote-rails', target: :_blank, class: 'btn btn-large btn-warning span12' %>
+<div class="row">  
+  <div class="col-md-12">
+    <%= link_to "http://github.com/rorlab/summernote-rails", 'http://github.com/rorlab/summernote-rails', target: :_blank, class: 'btn btn-large btn-warning center' %>
   </div>
 </div>
