test rails 4.0.2 with summernote-rails v0.5.0

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,5 +22,5 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path, class:'btn' %>
-<%= link_to 'Home', root_path, class:'btn' %>
+<%= link_to 'New Post', new_post_path, class:'btn btn-default' %>
+<%= link_to 'Home', root_path, class:'btn btn-default' %>
