--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,11 +33,14 @@
   </div>
 </nav>
 
-<div class='row'>
-  <div class='col-md-10 col-md-offset-1' style='padding:1em 0;'>
-    <%= yield %>
+  <div class="container">
+    <div class='row'>
+      <div class='col-md-10 col-md-offset-1'>
+        <%= yield %>
+      </div>
+    </div>
   </div>
+</div>
 
-</div>  
 </body>
 </html>
