--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,11 +4,13 @@
   <div class="form-group">
     <%= f.input :title, input_html:{class:'form-control'} %>
   </div>
-  <div class="form-group">  
+  <div class="form-group">
     <%= f.input :content, class:'summernote' %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-group">
     <%= f.button :submit, class: "btn btn-default" %>
+    <%= link_to 'Show', @post, class:'btn btn-default' if @post.persisted? %>
+    <%= link_to 'Back', posts_path, class:'btn btn-default' %>
   </div>
 <% end %>
