--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,5 +14,5 @@
   </div>
 </div>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Edit', edit_post_path(@post), class:'btn btn-default' %>
+<%= link_to 'Back', posts_path, class:'btn btn-default' %>
